--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -23,6 +23,7 @@ development: &default
   stripe_secret_key: <%= ENV["STRIPE_SECRET_KEY"] %>
   paypal_client_id: <%= ENV["PAYPAL_CLIENT_ID"] %>
   paypal_client_secret: <%= ENV["PAYPAL_CLIENT_SECRET"] %>
+  host_name: "33f2ead4.ngrok.io"
 
 test:
   <<: *default
