--- a/spec/vcr_cassettes/StripeCharge/success/calls_stripe_to_get_a_charge.yml
+++ b/spec/vcr_cassettes/StripeCharge/success/calls_stripe_to_get_a_charge.yml
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 20 Feb 2018 13:32:50 GMT
+      - Tue, 06 Mar 2018 14:41:27 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '783'
+      - '780'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_1zr1p9ISJZDMHq
+      - req_IF4euNgi8LHoCW
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1BxbEkG9Bw4keQMbFQgwtJ4i",
+          "id": "tok_1C2gypG9Bw4keQMbQyhVAZMA",
           "object": "token",
           "card": {
-            "id": "card_1BxbEkG9Bw4keQMbNJpBYcIx",
+            "id": "card_1C2gypG9Bw4keQMbzNxV82O6",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +84,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "188.115.178.240",
-          "created": 1519133570,
+          "client_ip": "31.31.98.229",
+          "created": 1520347287,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 20 Feb 2018 13:32:51 GMT
+  recorded_at: Tue, 06 Mar 2018 14:41:28 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1BxbEkG9Bw4keQMbFQgwtJ4i&description=&metadata[reference]=c0aa649f9230d00bec85
+      string: amount=3000&currency=usd&source=tok_1C2gypG9Bw4keQMbQyhVAZMA&description=&metadata[reference]=9340756cc7f6abbc90c6
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -110,7 +110,7 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - c0aa649f9230d00bec85
+      - 9340756cc7f6abbc90c6
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 20 Feb 2018 13:32:52 GMT
+      - Tue, 06 Mar 2018 14:41:29 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - c0aa649f9230d00bec85
+      - 9340756cc7f6abbc90c6
       Original-Request:
-      - req_jNczBWNTdbNhBp
+      - req_WWgHIuCUiIabgq
       Request-Id:
-      - req_jNczBWNTdbNhBp
+      - req_WWgHIuCUiIabgq
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -156,15 +156,15 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1BxbEmG9Bw4keQMbp6eleKZU",
+          "id": "ch_1C2gyrG9Bw4keQMbIdTU9vO1",
           "object": "charge",
           "amount": 3000,
           "amount_refunded": 0,
           "application": null,
           "application_fee": null,
-          "balance_transaction": "txn_1BxbEmG9Bw4keQMbzZZmOYA4",
+          "balance_transaction": "txn_1C2gyrG9Bw4keQMbRjW1FTNb",
           "captured": true,
-          "created": 1519133572,
+          "created": 1520347289,
           "currency": "usd",
           "customer": null,
           "description": "",
@@ -176,7 +176,7 @@ http_interactions:
           "invoice": null,
           "livemode": false,
           "metadata": {
-            "reference": "c0aa649f9230d00bec85"
+            "reference": "9340756cc7f6abbc90c6"
           },
           "on_behalf_of": null,
           "order": null,
@@ -196,12 +196,12 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/charges/ch_1BxbEmG9Bw4keQMbp6eleKZU/refunds"
+            "url": "/v1/charges/ch_1C2gyrG9Bw4keQMbIdTU9vO1/refunds"
           },
           "review": null,
           "shipping": null,
           "source": {
-            "id": "card_1BxbEkG9Bw4keQMbNJpBYcIx",
+            "id": "card_1C2gypG9Bw4keQMbzNxV82O6",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -231,5 +231,5 @@ http_interactions:
           "transfer_group": null
         }
     http_version: 
-  recorded_at: Tue, 20 Feb 2018 13:32:52 GMT
+  recorded_at: Tue, 06 Mar 2018 14:41:30 GMT
 recorded_with: VCR 4.0.0
