--- a/spec/vcr_cassettes/PurchasesCartViaStripe/successful_credit_card_payment/updates_the_ticket_status.yml
+++ b/spec/vcr_cassettes/PurchasesCartViaStripe/successful_credit_card_payment/updates_the_ticket_status.yml
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 06 Mar 2018 14:41:16 GMT
+      - Wed, 07 Mar 2018 19:58:19 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '783'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_ZHuBlkzRTUlSbz
+      - req_4anTMZE4cX1nIg
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C2gyeG9Bw4keQMbu2apXex2",
+          "id": "tok_1C38P1G9Bw4keQMbh3ryJjQz",
           "object": "token",
           "card": {
-            "id": "card_1C2gyeG9Bw4keQMbnna6nXJD",
+            "id": "card_1C38P0G9Bw4keQMbUx9Oadu4",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +84,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "31.31.98.229",
-          "created": 1520347276,
+          "client_ip": "176.119.124.235",
+          "created": 1520452699,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 06 Mar 2018 14:41:17 GMT
+  recorded_at: Wed, 07 Mar 2018 19:58:19 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1C2gyeG9Bw4keQMbu2apXex2&description=&metadata[reference]=60ca314a2a46873f28e4
+      string: amount=3000&currency=usd&source=tok_1C38P1G9Bw4keQMbh3ryJjQz&description=&metadata[reference]=8e421f7e6001264d181d
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -110,7 +110,7 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - 60ca314a2a46873f28e4
+      - 8e421f7e6001264d181d
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 06 Mar 2018 14:41:18 GMT
+      - Wed, 07 Mar 2018 19:58:20 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - 60ca314a2a46873f28e4
+      - 8e421f7e6001264d181d
       Original-Request:
-      - req_QcoCgmmqsp4GPr
+      - req_FeTjeyUlfX3tCb
       Request-Id:
-      - req_QcoCgmmqsp4GPr
+      - req_FeTjeyUlfX3tCb
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -156,15 +156,15 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1C2gygG9Bw4keQMbG8YMOyQD",
+          "id": "ch_1C38P2G9Bw4keQMblJ3MbwxY",
           "object": "charge",
           "amount": 3000,
           "amount_refunded": 0,
           "application": null,
           "application_fee": null,
-          "balance_transaction": "txn_1C2gygG9Bw4keQMbY8m35uym",
+          "balance_transaction": "txn_1C38P2G9Bw4keQMblryWnMdR",
           "captured": true,
-          "created": 1520347278,
+          "created": 1520452700,
           "currency": "usd",
           "customer": null,
           "description": "",
@@ -176,7 +176,7 @@ http_interactions:
           "invoice": null,
           "livemode": false,
           "metadata": {
-            "reference": "60ca314a2a46873f28e4"
+            "reference": "8e421f7e6001264d181d"
           },
           "on_behalf_of": null,
           "order": null,
@@ -196,12 +196,12 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/charges/ch_1C2gygG9Bw4keQMbG8YMOyQD/refunds"
+            "url": "/v1/charges/ch_1C38P2G9Bw4keQMblJ3MbwxY/refunds"
           },
           "review": null,
           "shipping": null,
           "source": {
-            "id": "card_1C2gyeG9Bw4keQMbnna6nXJD",
+            "id": "card_1C38P0G9Bw4keQMbUx9Oadu4",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -231,5 +231,5 @@ http_interactions:
           "transfer_group": null
         }
     http_version: 
-  recorded_at: Tue, 06 Mar 2018 14:41:19 GMT
+  recorded_at: Wed, 07 Mar 2018 19:58:21 GMT
 recorded_with: VCR 4.0.0
